test_regress/t/t_class_param.out
%Error-UNSUPPORTED: t/t_class_param.v:20:4: Unsupported: parameterized packages
   20 |    Cls #(.P(4)) c4;
      |    ^~~
%Error-UNSUPPORTED: t/t_class_param.v:9:23: Unsupported: class parameter
    9 | class Cls #(parameter P = 12);
      |                       ^
%Error: Exiting due to
